# spm-project

./: .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/server/: config.py  main.py  models.py  utils.py
backend/server/dependencies/: auth.py  grpc.py
backend/server/pb/: ads_pb2.py  ads_pb2_grpc.py  properties_pb2_grpc.py
backend/server/routers/: __init__.py
backend/server/routers/ads/: v1.py
backend/server/routers/auth/: v1.py
backend/server/routers/docs/: health.md
backend/server/routers/docs/v1/auth/: otp.md
backend/server/routers/health/: __init__.py
backend/server/routers/realestate/: v1.py
backend/server/schemas/responses/: __init__.py  ads.py  realestate.py
client/src/components/: Card.svelte  ListingForm.svelte  Pagination.svelte
client/src/routes/: +layout.svelte  +page.svelte  Header.svelte
client/src/routes/listings/: +page.svelte
client/src/routes/listings/[id]/: +page.svelte
client/src/routes/listings/me/: +page.svelte
client/src/routes/units/[unit_id]/: +page.svelte
data/: test.ipynb
data/pipeline/: collection.py  main.py  push.py
models/: main.py  regressors.py
services/acl/app/: auth.py  repositories.py  services.py  utils.py
services/realestate/app/: client.py  main.py  models.py  repositories.py  schemas.py  services.py
services/realestate/app/pb/: ads_pb2_grpc.py  properties_pb2.py
services/realestate/app/protos/: ads.proto  properties.proto
services/valuation/: Dockerfile
services/valuation/app/: realestate.py  services.py
services/valuation/app/pb/: properties_pb2_grpc.py
(+3 files in other folders)
