[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The entrypoint API for the spm service side applications"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
